# pc-repair-agent

./: .gitignore  AGENTS.md  package.json  release.ps1  start-dev.ps1
backend/: pyproject.toml
backend/config/: nanobot_config.example.json
backend/pc_agent_backend/: __init__.py  app.py  config.py  main.py  version.py
backend/pc_agent_backend/agents/: __init__.py  errors.py  permissions.py  placeholders.py  registry.py  risk.py
backend/pc_agent_backend/agents/claude_code/: __init__.py  adapter.py
backend/pc_agent_backend/agents/codex/: __init__.py  adapter.py
backend/pc_agent_backend/agents/nanobot/: __init__.py  adapter.py  events.py  hooks.py
backend/pc_agent_backend/api/: dependencies.py  router.py
backend/pc_agent_backend/api/routes/: approvals.py  conversations.py  health.py  settings.py  system.py  turns.py
backend/pc_agent_backend/core/: config.py  encoding.py  json_utils.py  paths.py  process_utils.py
backend/pc_agent_backend/schemas/: agent.py
backend/pc_agent_backend/services/: approvals.py  conversation_recorder.py  model_config.py  runtime.py  security_settings.py
backend/pc_agent_backend/storage/: __init__.py  conversations.py
demo/: README.md  check_weather_tool.py  cli_approval_demo.py  codex_adapter_probe.py  pyproject.toml
demo/pc_agent_nanobot_demo/: __init__.py  weather_tool.py
docs/: AGENT_ADAPTER_REDESIGN.md  ARCHITECTURE.md  BUILD_AND_RELEASE.md  DEVELOPMENT_WORKFLOW.md  PRD.md  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+34 files in other folders)
