[project]
name = "pc-agent-backend"
version = "0.1.3"
description = "PC Repair Agent Python backend powered by nanobot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "nanobot-ai>=0.2.2",
    "uvicorn>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pc_agent_backend"]

