[project]
name = "pc-agent-nanobot-demo"
version = "0.1.0"
description = "PC Repair Agent nanobot SDK CLI approval demo"
requires-python = ">=3.11"
dependencies = [
    "nanobot-ai>=0.2.2",
]

[project.entry-points."nanobot.tools"]
demo_weather = "pc_agent_nanobot_demo.weather_tool:WeatherTool"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pc_agent_nanobot_demo"]
