[package]
name = "pc-repair-agent"
version = "0.1.1"
description = "PC Repair Agent desktop shell"
authors = ["PC Repair Agent"]
edition = "2021"

[lib]
name = "pc_repair_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

